# colored-traceback.py

./: .gitattributes  Makefile  README.rst  pyproject.toml  setup.py  test.py
colored_traceback/: __init__.py  __main__.py  colored_traceback.py
colored_traceback/always/: __init__.py
colored_traceback/auto/: __init__.py
